Last updated: 2023 July 28
------------

Change log
----------

2023 Jul 28

 - Added support for vp_shape='z linear'.

2023 Jun 16

 - Updated effective potentials in potential_tools.f90 to use kind-rk real
   constants, rather than the default real kind as before. This should 
   produce more consistent results by eliminating intermediate rounding
   (exact float to default real to kind-rk real), but changes the results
   slightly for the internally-tabulated potentials.

 - Added support for approximate left wavefunctions (fake_left_propagation
   and reconstruct_left), which could improve the performance at the cost
   of lower accuracy (see manual). 

 - Added option composition_max_energy, which may speed-up composition 
   analysis in some cases. 

 - Added option wt_enable_memory_caches, which may improve performance for
   repeated calls to analysis routines, at the cost of increased memory
   footprint.

2022 Sep 26

 - Added vp_shape="alt spline".

2022 Jul 19

 - Added vp_shape="zz Sin2".

2020 Aug 10

 - Added potentials for Li, Na, K, Rb, and Cs from Schweizer, Fassbinder, and
   Gonzalez-Ferez, At. Data Nucl. Data Tables 72, 33-55 (1999).

2020 Apr 26

 - Added vp_shape='zero'

2020 Dec 17

 - Added cubic-spline field input (vp_shape="spline")

2020 Jul 17

 - Added support for infinitely-high repulsive barrier at the origin, 
   through SD_RGRID_RMIN input parameter.

2020 Jul 13

 - Added effective potentials from Garvey, Jackman, and Green, PRA 12, 1144 
   (1975), and a generalized input form inspired by these potentials.

2020 Feb 04

 - Added support for reading channel-dependent effective potentials in the
   general exponential form.

2019 Dec 23

 - Added support for reading channel-dependent effective potentials in the
   extended Tong-Lin form.

2019 Nov 13

 - Minor fixes to allow building with AOCC 2.0. There appears to be no 
   performance advantage to using it - both gfortran (7.0+) and ifort
   are always faster.

2018 Oct 08
